# utils/src/types.ts
@@ -1,6 +1,6 @@
 import type { IGetSubmissionResult } from '@game/db';
 import type { WalletAddress } from 'paima-sdk/paima-utils';
 
-
+export type ContractAddress = string;
 
 
